--- a/src/assets/scss/base/_highlight.scss
+++ b/src/assets/scss/base/_highlight.scss
@@ -55,7 +55,8 @@ pre[class*="language-"] {
 
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
-    background: #f5f2f0;
+    // background: #f5f2f0;
+    background: #fff;
 }
 
 /* Inline code */
