--- a/src/assets/scss/base/_highlight.scss
+++ b/src/assets/scss/base/_highlight.scss
@@ -55,15 +55,21 @@ pre[class*="language-"] {
 
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
-    // background: #f5f2f0;
-    background: #fff;
+    background: #f5f2f0;
+    border-radius: 20px;
 }
 
 /* Inline code */
 :not(pre) > code[class*="language-"] {
-    padding: .1em;
-    border-radius: .3em;
+    color: #ff3333;
+    padding: 0.2em;
+    border-radius: 5px;
+    font-size: 0.75em;
     white-space: normal;
+}
+
+.token {
+    background-color: #f5f2f0;
 }
 
 .token.comment,
@@ -74,7 +80,7 @@ pre[class*="language-"] {
 }
 
 .token.punctuation {
-    color: #999;
+    color: #333;
 }
 
 .namespace {
@@ -106,7 +112,7 @@ pre[class*="language-"] {
 .language-css .token.string,
 .style .token.string {
     color: #a67f59;
-    background: hsla(0, 0%, 100%, .5);
+    background-color: #f5f2f0;
 }
 
 .token.atrule,
