--- a/src/assets/scss/base/_generic.scss
+++ b/src/assets/scss/base/_generic.scss
@@ -108,11 +108,11 @@ strong {
 
 ul {
     list-style: disc;
-    margin-top: -25px;
+    margin-top: -5px;
     @include margin-bottom(1);
     & li {
-        // padding: 0 5px;
-        // margin-bottom: 10px;
+        padding: 0 5px;
+        margin-bottom: 10px;
     }
 }
 
